@@ -1,6 +1,7 @@
 #!/usr/bin/env python
 
 #---------------------------------------------------------------------------
+## VulaSHAKA (Simultaneous Neutronic, Fuel Performance, Heat And Kinetics Analysis)
 ## Copyright (C) 2009-2010 Pebble Bed Modular Reactor (Pty) Limited (PBMR)
 ## 
 ## This program is free software: you can redistribute it and/or modify
@@ -16,7 +17,7 @@
 ## You should have received a copy of the GNU General Public License
 ## along with this program.  If not, see <http://www.gnu.org/licenses/>.
 ## 
-## See https://csrcs.pbmr.co.za/svn/nea/prototypes/reaktor/ifoam
+## See https://vulashaka.svn.sourceforge.net/svnroot/vulashaka/ifoam
 ##
 ## Author : Alexey PETROV
 ##
