@@ -2,6 +2,7 @@
 NEWS
 #--------------------------------------------------------------------------------------
 
+VulaSHAKA (Simultaneous Neutronic, Fuel Performance, Heat And Kinetics Analysis)
 Copyright (C) 2009-2010 Pebble Bed Modular Reactor (Pty) Limited (PBMR)
 
 This program is free software: you can redistribute it and/or modify
@@ -17,7 +18,7 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-See See https://csrcs.pbmr.co.za/svn/nea/prototypes/reaktor/ifoam
+See See https://vulashaka.svn.sourceforge.net/svnroot/vulashaka/ifoam
 
 ---------------------------------------------------------------------------
 
